added slide panel plugin for sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,4 @@
-<div class="sidebar">
+<div id="slidepanel" class="sidebar cb_slide_panel">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
