changed default info on sidebar by my own info

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,8 @@
     {% include sidebar.html %}
 
     <div class="content container">
-  <a href="sidebar.html" data-slidepanel="panel">Show Panel</a>
+  <a href="#" data-slidepanel="panel"><i class="fa fa-align-justify"></i></a>
+  <a href="{{ site.baseurl }}" ><i class="fa fa-institution"></i></a>
       {{ content }}
     </div>
 
@@ -17,8 +18,5 @@
     	<script src="{{ site.baseurl }}public/js/main.js"></script>
     	<script src="{{ site.baseurl }}public/js/slide_tab.js"></script>
 
-	<script type="text/javascript">
-
-</script>
   </body>
 </html>
