--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,11 +6,14 @@
           {{ site.title }}
         </a>
       </h1>
-      <p class="lead">{{ site.description }}</p>
+      <p class="lead">{{ site.description }}  <i class="fa fa-github"></i></p>
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
+
+      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}"><i class="fa fa-slack"></i> Home</a>
+      <a class="sidebar-nav-item" href="https://twitter.com/byverdu"><i class="fa fa-twitter-square"></i> Twitter</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}"><i class="fa fa-github-square"></i> GitHub project</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
@@ -21,13 +24,11 @@
       {% for node in pages_list %}
         {% if node.title != null %}
           {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}"><i class="fa fa-code-fork"></i> {{ node.title }}</a>
           {% endif %}
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-      <a class="sidebar-nav-item fa fa-github" href="{{ site.github.repo }}">GitHub project</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
