--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
     {% include sidebar.html %}
 
     <div class="content container">
-  <a href="#" data-slidepanel="panel"><i class="fa fa-align-justify"></i></a>
-  <a href="{{ site.baseurl }}" ><i class="fa fa-institution"></i></a>
+  <a href="#" data-slidepanel="panel"><i class="fa fa-align-justify fa-fw"></i></a>
+  <a href="{{ site.baseurl }}" ><i class="fa fa-institution fa-fw"></i></a>
       {{ content }}
     </div>
 
