--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
     <nav class="sidebar-nav">
 
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}"><i class="fa fa-slack"></i> Home</a>
-      <a class="sidebar-nav-item" href="https://twitter.com/byverdu"><i class="fa fa-twitter-square"></i> Twitter</a>
+      <a class="sidebar-nav-item" href="{{ site.author.url }}"><i class="fa fa-twitter-square"></i> Twitter</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}"><i class="fa fa-github-square"></i> GitHub project</a>
 
       {% comment %}
