added first post, read more link and highlight.js for code snippets

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,11 +19,13 @@
   	</nav>
       
       {{ content }}
+
+      
     </div>
 
     	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     	<script src="{{ site.baseurl }}public/js/main.js"></script>
     	<script src="{{ site.baseurl }}public/js/slide_tab.js"></script>
-
+      <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js"></script>
   </body>
 </html>
