--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/slide_tab.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/own_style.css">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/tomorrow.min.css">
+
   
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
