--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
   {{ content }}
 </div>
 
-<div class="related">
+<!-- <div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
@@ -18,10 +18,12 @@ layout: default
             {{ post.title }}
             <small>{{ post.date | date_to_string }}</small>
 
-            
+
           </a>
         </h3>
       </li>
     {% endfor %}
   </ul>
-</div>
+</div -->>
+
+{% include comments.html %}
