--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,12 +20,13 @@
       
       {{ content }}
 
-      
+
     </div>
 
     	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     	<script src="{{ site.baseurl }}public/js/main.js"></script>
-    	<script src="{{ site.baseurl }}public/js/slide_tab.js"></script>
-      <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js"></script>
+      <script src="{{ site.baseurl }}public/js/slide_tab.js"></script>
+    	<script src="{{ site.baseurl }}public/js/highlight.pack.js"></script>
+      
   </body>
 </html>
