changed favicon, sidebar and swap about page for cv page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,9 +20,15 @@
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/lanyon.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
 
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}public/apple-touch-icon-precomposed.png">
-  <link rel="shortcut icon" href="{{ site.baseurl }}public/favicon.ico">
+  <link rel="apple-touch-icon" href="{{ site.baseurl }}public/images/touch-icon-iphone-60x60.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="{{ site.baseurl }}public/images/touch-icon-ipad-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}public/images/touch-icon-iphone-retina-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="{{ site.baseurl }}public/images/touch-icon-ipad-retina-152x152.png">
+
+  <link rel="shortcut icon" href="{{ site.baseurl }}public/images/favicon.ico">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
