--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
     
     <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}"><i class="fa fa-slack"></i> Home</a>
     <a class="sidebar-nav-item" href="{{ site.author.url }}"><i class="fa fa-twitter-square"></i> Twitter</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}"><i class="fa fa-github-square"></i> GitHub project</a>
+    <a class="sidebar-nav-item" href="{{ site.github_repo }}"><i class="fa fa-github-square"></i> GitHub project</a>
 
     {% comment %}
       The code below dynamically generates a sidebar nav of pages with
@@ -28,12 +28,10 @@
       {% endif %}
     {% endfor %}
 
-  <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
-  </nav>
-
   <div class="sidebar-item">
     <p>
-      &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+      &copy;  All rights reserved.
+      {{ site.time | date: '%Y' }}.
     </p>
   </div>
 </div>
