--- a/public/css/by_styles.scss
+++ b/public/css/by_styles.scss
@@ -2,6 +2,34 @@
 
 ---
 
+// Mixins and variables
+
+@mixin set_arrow_tooltip{
+  visibility: hidden;
+	transition:visibility 0s ease-in 0.5s;
+	content: '';
+  color: transparent;
+  position: absolute;
+}
+
+@mixin set_bubble_tooltip{
+	visibility: hidden;
+	transition:visibility 0s ease-in 0.5s;
+	position: absolute;
+	box-shadow: 0px 0px 3px;
+	padding: 7px;
+	border-radius: 11px;
+}
+
+@mixin show_tooltip{
+
+	&:hover::before,
+	&:hover::after {
+		visibility: visible;
+
+	}
+}
+
 
 // Curriculum styles
 
@@ -13,5 +41,82 @@
 		width: 200px;
 		position: relative;
 		right: 200px;
+	}
+}
+
+
+
+// Styles demos
+
+#pop_up_demo{
+	
+	position:relative;
+	width: 350px;
+	margin: 80px auto;
+
+	#home{
+	
+	  &::before{
+			
+			@include set_arrow_tooltip();
+			border-top: 10px solid rgba(25,25,25,0.3);
+			border-right: 20px solid transparent;
+			border-left: 20px solid transparent;
+			top: -16px;
+      margin-left: -4px;
+		}
+
+		&::after{
+
+			@include set_bubble_tooltip();
+			content: "Home";
+			top: -60px;
+			left: 62px;
+			background-color: rgba(172,65,66,0.3);
+		}
+		
+		@include show_tooltip();
+	}
+
+	#user{
+  
+	  &::before{
+		
+			@include set_arrow_tooltip();
+			border-bottom: 10px solid rgba(25,25,25,0.3);
+			border-right: 20px solid transparent;
+			border-left: 20px solid transparent;
+			top: 42px;
+	    margin-left: -7px;
+	  }
+
+	  &::after{
+
+		  @include set_bubble_tooltip();
+		  content: "About";
+		  top:  53px;
+		  left: 130px;
+		  background-color: rgba(172,65,66,0.3);
+	  }
+
+    @include show_tooltip();
+	}
+
+	.nav_bar{
+		list-style: none;
+		display: flex;
+
+		li{
+			margin-left: 40px;
+      
+      i{
+      	font-size: 34px;
+      	color: #ac4142
+			}
+      &:last-child{
+      	color: #4DB5D6
+      }
+
+		}
 	}
 }
