--- a/public/css/by_styles.scss
+++ b/public/css/by_styles.scss
@@ -20,6 +20,7 @@
 @mixin set_bubble_tooltip{
   
   @include bubble_arrow_common();
+  font-size: 20px;
 	box-shadow: 0px 0px 3px;
 	padding: 7px;
 	border-radius: 11px;
@@ -66,7 +67,7 @@
 			margin-left: 40px;
       
       i{
-      	font-size: 34px;
+      	font-size: 34px !important; 
       	color: #ac4142
 			}
 		}
@@ -121,3 +122,56 @@
 
   @include show_tooltip();
 }
+
+#settings{
+
+	&::before{
+	
+		@include set_arrow_tooltip();
+
+		border-bottom: 15px solid transparent;
+    border-top: 15px solid transparent;
+    border-left: 15px solid rgba(25,25,25,0.3);
+    top: 0;
+    margin-left: -20px;
+  }
+
+  &::after{
+
+	  @include set_bubble_tooltip();
+	  content: "Settings";
+	  top:  -7px;
+	  left: -26px;
+	  background-color: rgba(172,65,66,0.3);
+  }
+
+  @include show_tooltip();
+}
+
+
+#archive{
+
+	&::before{
+	
+		@include set_arrow_tooltip();
+
+		border-bottom: 15px solid transparent;
+    border-top: 15px solid transparent;
+    border-right: 15px solid rgba(25,25,25,0.3);
+    top: 0;
+    margin-left: 40px;
+  }
+
+  &::after{
+
+	  @include set_bubble_tooltip();
+	  content: "Archive";
+	  top:  -7px;
+	  right: -82px;
+	  background-color: rgba(172,65,66,0.3);
+  }
+
+  @include show_tooltip();
+}
+
+// End demo tooltip
