--- a/public/css/by_styles.scss
+++ b/public/css/by_styles.scss
@@ -2,40 +2,6 @@
 
 ---
 
-// Mixins and variables
-
-@mixin bubble_arrow_common{
-  visibility: hidden;
-	transition:visibility 0s ease-in 0.5s;
-	position: absolute;
-}
-
-@mixin set_arrow_tooltip{
-	
-	@include bubble_arrow_common();
-	content: '';
-  color: transparent;
-}
-
-@mixin set_bubble_tooltip{
-  
-  @include bubble_arrow_common();
-  font-size: 20px;
-	box-shadow: 0px 0px 3px;
-	padding: 7px;
-	border-radius: 11px;
-}
-
-@mixin show_tooltip{
-
-	&:hover::before,
-	&:hover::after {
-		visibility: visible;
-
-	}
-}
-
-
 // Curriculum styles
 
 .contact ul{
@@ -53,125 +19,6 @@
 
 // Styles demos
 
-#pop_up_demo{
-	
-	position:relative;
-	width: 350px;
-	margin: 80px auto;
-
-	.nav_bar{
-		list-style: none;
-		display: flex;
-
-		li{
-			margin-left: 40px;
-      
-      i{
-      	font-size: 34px !important; 
-      	color: #ac4142
-			}
-		}
-	}
-}
-
-#home{
-
-  &::before{
-		
-		@include set_arrow_tooltip();
-		border-top: 10px solid rgba(25,25,25,0.3);
-		border-right: 20px solid transparent;
-		border-left: 20px solid transparent;
-		top: -16px;
-    margin-left: -4px;
-	}
-
-	&::after{
-
-		@include set_bubble_tooltip();
-		content: "Home";
-		top: -60px;
-		left: 138px;
-		background-color: rgba(172,65,66,0.3);
-	}
-	
-	@include show_tooltip();
-}
+@import 'demo_tooltip';
 
 
-#about{
-
-  &::before{
-	
-		@include set_arrow_tooltip();
-		border-bottom: 10px solid rgba(25,25,25,0.3);
-		border-right: 20px solid transparent;
-		border-left: 20px solid transparent;
-		top: 42px;
-    margin-left: -7px;
-  }
-
-  &::after{
-
-	  @include set_bubble_tooltip();
-	  content: "About";
-	  top:  53px;
-	  left: 207px;
-	  background-color: rgba(172,65,66,0.3);
-  }
-
-  @include show_tooltip();
-}
-
-#settings{
-
-	&::before{
-	
-		@include set_arrow_tooltip();
-
-		border-bottom: 15px solid transparent;
-    border-top: 15px solid transparent;
-    border-left: 15px solid rgba(25,25,25,0.3);
-    top: 0;
-    margin-left: -20px;
-  }
-
-  &::after{
-
-	  @include set_bubble_tooltip();
-	  content: "Settings";
-	  top:  -7px;
-	  left: -26px;
-	  background-color: rgba(172,65,66,0.3);
-  }
-
-  @include show_tooltip();
-}
-
-
-#archive{
-
-	&::before{
-	
-		@include set_arrow_tooltip();
-
-		border-bottom: 15px solid transparent;
-    border-top: 15px solid transparent;
-    border-right: 15px solid rgba(25,25,25,0.3);
-    top: 0;
-    margin-left: 40px;
-  }
-
-  &::after{
-
-	  @include set_bubble_tooltip();
-	  content: "Archive";
-	  top:  -7px;
-	  right: -82px;
-	  background-color: rgba(172,65,66,0.3);
-  }
-
-  @include show_tooltip();
-}
-
-// End demo tooltip
