--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,6 +13,7 @@
     <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}"><i class="fa fa-slack"></i> Home</a>
     <a class="sidebar-nav-item" href="{{ site.author.url }}"><i class="fa fa-twitter-square"></i> Twitter</a>
     <a class="sidebar-nav-item" href="{{ site.github_repo }}"><i class="fa fa-github-square"></i> GitHub project</a>
+    <a class="sidebar-nav-item" href="http://byverdu.es"><i class="fa fa-language"></i> My Spanish Blog</a>
 
     {% comment %}
       The code below dynamically generates a sidebar nav of pages with
