curriculum page updated

--- a/public/css/by_styles.scss
+++ b/public/css/by_styles.scss
@@ -11,7 +11,7 @@
 		float: right;
 		width: 200px;
 		position: relative;
-		right: 200px;
+		right: 50px;
 	}
 }
 
@@ -29,3 +29,16 @@
 @import 'demo_tooltip';
 
 
+// Media queries which I am not products
+
+@media screen and (max-width: 900px){
+	.contact ul{
+		text-align: center;
+	li:nth-child(odd){
+		float: none;
+		right: 0;
+		width: inherit;
+	}
+}
+
+}
